filter fix
